<resources>
    <string name="app_name">Cooking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="section_format">%1$d</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_main">MainActivity</string>
    <string name="nav_order">CookingOrder</string>
    <string name="nav_myinfo">MyInfo</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_menu_more">More</string>
    <string name="nav_share">Share To Your Friend</string>

    <string name="nav_send">Send You Reports</string>
    <string name="wheel_user">User</string>
    <string name="wheel_business">Business</string>
    <string name="wheel_admin">Admin</string>
    <string name="Login_snackbar_send">Send To</string>
    <string name="Register_success">Register Success</string>
    <string name="Register_failed">Register Failed</string>
    <string name="title_activity_edit_info">EditInfo</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="edit_button">Edit Info</string>
    <string name="Edit_Success">Edit Success</string>
    <string name="Edit_Failed">Edit Failed</string>
    <string name="r_email">Email</string>
    <string name="edit_phone">Phone</string>
    <string name="edit_age">Age</string>
    <string name="Order_Actionbar">Your Order</string>
    <string name="wechat_pay">WeChat Pay</string>
    <string name="ALIPAY">ALIPAY</string>
    <string name="PayText">Pay:</string>
    <string name="Edit_good_savebtn">Save Good</string>
    <string name="Edit_good_name">Good Name</string>
    <string name="Edit_good_price">Good Price</string>
    <string name="Edit_good_introduction">Good Introduction</string>
    <string name="Edit_good_surplus">Good Surplus</string>
    <string name="prompt_username">Username</string>
    <string name="loginout">Login Out</string>
    <string name="goodprice">Good Price</string>
    <string name="goodaddress">Address</string>
    <string name="clicktoorder">Click Button To Order</string>
    <string name="AddOrder">Add To Your Order</string>
    <string name="successorder">Order Success</string>
    <string name="failorder">Order Fail</string>
    <string name="nowprice">Now Your Order Price</string>
    <string name="Edit_good_bussiness">Edit Bussiness</string>
    <string name="editb_name">Name</string>
    <string name="editb_local">Address</string>
    <string name="editb_phone">Phone</string>
    <string name="editb_save_btn">Save</string>
    <string name="nav_find_bussiness">Search Bussiness</string>
</resources>
