<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_order" />
        <item
            android:id="@+id/nav_myinfo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_myinfo" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_exit" />
    </group>

    <item android:title="@string/nav_menu_more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />

            <item
                android:id="@+id/nav_search"
                android:icon="?android:attr/actionModeFindDrawable"
                android:title="@string/nav_find_bussiness" />

        </menu>
    </item>

</menu>
