<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bussiness"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codinggarfield.cooking.cooking.BussinessActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editb_name"
                android:ems="10"
                android:id="@+id/upbname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editb_local"
                android:ems="10"
                android:id="@+id/upblocal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/editb_phone"
                android:ems="10"
                android:id="@+id/upbphone" />

            <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textPersonName"-->
            <!--android:hint="@string/Edit_good_surplus"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/upgoodsurplus" />-->



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp">


                <Button
                    android:id="@+id/savenbussiness_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="@string/editb_save_btn"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/editb_exit_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:text="@string/loginout"
                    android:textStyle="bold"
                    android:layout_weight="0.5" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
