<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:aigestudio="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.codinggarfield.cooking.cooking.LoginActivity">

    <!-- Login progress -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.17">

                        <RelativeLayout
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:src="@drawable/head"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:id="@+id/edit_head" />
                        </RelativeLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/edit_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_username"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <EditText
                                android:id="@+id/edit_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/edit_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/r_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/edit_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_phone"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberSigned"
                                android:hint="@string/edit_age"
                                android:ems="10"

                                android:layout_alignParentBottom="true"
                                android:layout_centerHorizontal="true"
                                android:id="@+id/edit_age" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">




                        <Button
                            android:id="@+id/edit_info_button"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/edit_button"
                            android:textStyle="bold"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
