<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.codinggarfield.cooking.cooking.PayActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <TextView
                    android:text="@string/PayText"
                    android:gravity="bottom|right"
                    android:layout_width="0dp"
                    android:textSize="28dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView2"
                    android:layout_weight="2.5" />

                <TextView
                    android:text="¥"
                    android:layout_width="wrap_content"
                    android:textSize="50dp"
                    android:layout_height="match_parent"
                    android:gravity="bottom|right"
                    android:id="@+id/y"
                    android:layout_weight="0.4" />
                <TextView
                    android:text="0.01"
                    android:textSize="50dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:id="@+id/price"
                    android:layout_weight="3"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <Button
                android:id="@+id/alipay_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ALIPAY"
                android:textStyle="bold"
                android:layout_weight="1" />

            <Button
                android:id="@+id/wechat_pay_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_pay"
                android:textStyle="bold"
                android:layout_weight="1" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
